--- a/index.html
+++ b/index.html
@@ -971,6 +971,7 @@
                         <input type="date" id="reportFromDate">
                         <button id="applyReportFilter" class="filter-btn">تطبيق</button>
                         <button id="openSalesHistory" class="report-btn"><i class="fas fa-history"></i> سجل المبيعات</button>
+                        <button id="restoreInvoicesBtn" class="report-btn"><i class="fas fa-undo"></i> استرجاع الفواتير</button>
                     </div>
                 </div>
                 
