--- a/index.html
+++ b/index.html
@@ -1103,6 +1103,13 @@
                                 </label>
                                 <input type="file" id="importFile" accept=".json" style="display: none;">
                             </div>
+                            <div class="import-section" style="margin-top:8px;">
+                                <label for="importPCFile" class="save-btn">
+                                    <i class="fas fa-user-tag"></i>
+                                    استيراد العملاء والمنتجات فقط
+                                </label>
+                                <input type="file" id="importPCFile" accept=".json" style="display: none;">
+                            </div>
                             <button id="clearDataBtn" class="clear-btn">
                                 <i class="fas fa-trash"></i>
                                 مسح جميع البيانات
